<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.main.addStory.AddStoryFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvAddImage"
                style="@style/text_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/add_image" />

            <RadioGroup
                android:id="@+id/rgImageMode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp">

                <RadioButton
                    android:id="@+id/rbLocalImage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/radio_choose_local" />

                <RadioButton
                    android:id="@+id/rbImageUrl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_choose_url" />

            </RadioGroup>

            <LinearLayout
                android:id="@+id/llLocalButtons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <Button
                    android:id="@+id/btChooseImage"
                    style="@style/button"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:layout_marginVertical="16dp"
                    android:text="@string/choose_image" />

                <Button
                    android:id="@+id/btTakePicture"
                    style="@style/button"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:layout_marginVertical="16dp"
                    android:text="@string/take_photo" />

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tfImageUrl"
                style="?attr/textInputOutlinedDenseStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:hint="@string/image_url"
                android:visibility="gone"
                app:endIconDrawable="@drawable/ic_close_24dp"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_link_24dp"
                    android:drawablePadding="12dp"
                    android:ellipsize="end"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/ivImageSelected"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="16dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/selected_image_preview"
                android:scaleType="fitXY"
                android:src="@drawable/ic_place_holder" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tfStoryDescription"
                style="?attr/textInputOutlinedDenseStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:hint="@string/description"
                app:endIconDrawable="@drawable/ic_close_24dp"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/ed_add_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                android:id="@+id/cbLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/display_current_location"/>

            <Button
                android:id="@+id/button_add"
                style="@style/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="16dp"
                android:text="@string/add_story" />

        </LinearLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/pbAddStory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone" />

</androidx.constraintlayout.widget.ConstraintLayout>